# Practica3_Redes

./: .gitignore  GeminiConnection.cpp  GeminiConnection.h  GeminiServer.cpp  GeminiServer.h  GopherConnection.cpp  Makefile  PROTOCOLS.md  ProtocolServer.cpp  ProtocolServer.h  README.md  TESTING.md  TLS_SETUP.md  common.h  main.cpp  protocol_server.cpp
.github/workflows/: classroom.yml
demo/gemini_demo/: GUIA.txt  README.gmi  index.html
demo/gemini_demo/docs/: clientes.gmi  ejemplo_cliente.txt  historia.gmi  protocolo.gmi
demo/gopher_demo/: GUIA.txt  README.txt  index.html
demo/gopher_demo/docs/: clientes.txt  ejemplo_cliente.txt  historia.txt  protocolo.txt
protocol_server_cpp/: .gitignore  CMakeLists.txt  GeminiConnection.cpp  GeminiConnection.h  GeminiServer.cpp  GeminiServer.h  GopherConnection.cpp  GopherConnection.h  GopherServer.cpp  GopherServer.h  ProtocolServer.cpp  ProtocolServer.h  common.h  protocol_server.cpp
